--- a/examples/simple/Pulumi.yaml
+++ b/examples/simple/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: simple
+name: kind-native
 runtime: nodejs
-description: A simple xyz example
+description: A simple kind Kubernetes-in-Docker provider
