--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,9 +1,8 @@
 {
-    "name": "@pulumi/xyz",
+    "name": "@pulumi/kind",
     "version": "${VERSION}",
     "scripts": {
-        "build": "tsc",
-        "install": "node scripts/install-pulumi-plugin.js resource xyz ${VERSION}"
+        "build": "tsc"
     },
     "dependencies": {
         "@pulumi/pulumi": "^3.42.0"
@@ -14,6 +13,6 @@
     },
     "pulumi": {
         "resource": true,
-        "name": "xyz"
+        "name": "kind"
     }
 }
