--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,19 @@
 {
-    "build": {
-        "dockerfile": "../docker/Dockerfile"
-    },
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "golang.go"
-            ]
-        }
+  "name": "Devbox Remote Container",
+  "build": {
+    "dockerfile": "../docker/Dockerfile",
+    "context": ".."
+  },
+  "customizations": {
+    "vscode": {
+      "settings": {},
+      "extensions": [
+        "ms-azuretools.vscode-docker",
+        "ms-vscode.makefile-tools",
+        "jetpack-io.devbox",
+        "golang.go"
+      ]
     }
+  },
+  "remoteUser": "root"
 }
