--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -60,6 +60,13 @@ RUN set -ex \
         | tar -C /usr/local/ -xzvf - \
     && which go \
     && go version \
+    && go install github.com/cweill/gotests/gotests@latest \
+    && go install github.com/fatih/gomodifytags@latest \
+    && go install github.com/josharian/impl@latest \
+    && go install github.com/haya14busa/goplay/cmd/goplay@latest \
+    && go install github.com/go-delve/delve/cmd/dlv@latest \
+    && go install honnef.co/go/tools/cmd/staticcheck@latest \
+    && go install golang.org/x/tools/gopls@latest \
     && true
 
 # nodejs npm yarn
