--- a/sdk/nodejs/tsconfig.json
+++ b/sdk/nodejs/tsconfig.json
@@ -14,8 +14,8 @@
     },
     "files": [
         "index.ts",
+        "kind.ts",
         "provider.ts",
-        "random.ts",
         "utilities.ts"
     ]
 }
