--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,12 +6,25 @@
   },
   "customizations": {
     "vscode": {
-      "settings": {},
+      "settings": {
+        "editor.minimap.enabled": false,
+        "workbench.activityBar.visible": true,
+        "editor.gotoLocation.multipleReferences": "goto",
+        "editor.gotoLocation.multipleDefinitions": "goto",
+        "editor.gotoLocation.multipleDeclarations": "goto",
+        "editor.gotoLocation.multipleImplementations": "goto",
+        "editor.gotoLocation.multipleTypeDefinitions": "goto",
+        "explorer.openEditors.visible": 0,
+        "editor.quickSuggestionsDelay": 0,
+        "editor.suggestSelection": "first",
+        "editor.snippetSuggestions": "top",
+        "files.trimTrailingWhitespace": true,
+        "files.trimFinalNewlines": true
+      },
       "extensions": [
         "ms-azuretools.vscode-docker",
         "ms-vscode.makefile-tools",
         "ms-vscode-remote.remote-containers",
-        "mads-hartmann.bash-ide-vscode",
         "golang.go"
       ]
     }
@@ -23,10 +36,9 @@
     "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
       "version": "latest",
       "installDockerBuildx": true,
-      "moby": true
+      "moby": false
     }
   },
   "remoteUser": "root",
-  "forwardPorts": [8080],
   "runArgs": ["--network=host"]
 }
