--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,7 @@
         "files.trimFinalNewlines": true
       },
       "extensions": [
+        "vscodevim.vim",
         "ms-azuretools.vscode-docker",
         "ms-vscode.makefile-tools",
         "ms-vscode-remote.remote-containers",
