--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,11 @@
-# Example Usage:
+# Build Container:
 # - docker build -t provider -f docker/Dockerfile .
+#
+# Build Provider:
 # - docker run -it --rm -v $PWD:/provider provider
+#
+# Run Container:
+# - docker run -it --rm -v $PWD:/provider --entrypoint bash provider
 
 FROM docker.io/library/ubuntu:22.04
 
@@ -18,23 +23,34 @@ dotnet-sdk-7.0 \
 ca-certificates \
 build-essential \
 dotnet-runtime-7.0 \
-# golang-go \ # default packages go 1.18 is not new enough
+# golang-go \ # default go 1.18 package version is not new enough
 "
 
-# Append rootfs directory tree into container
-# place any additional files to be included into the rootfs directory
+ARG GO_PKGS="\
+golang.org/x/tools/gopls@latest \
+github.com/josharian/impl@latest \
+github.com/fatih/gomodifytags@latest \
+github.com/cweill/gotests/gotests@latest \
+github.com/go-delve/delve/cmd/dlv@latest \
+honnef.co/go/tools/cmd/staticcheck@latest \
+github.com/haya14busa/goplay/cmd/goplay@latest \
+"
+
+# Append rootfs directory tree into container to copy
+# additional files into the container's directory tree
 ADD docker/rootfs /
-# Disable Timezone prompts
+
+# Disable timezone prompts
 ENV TZ=UTC
-# Disable time zone prompts etc.
+# Disable package manager prompts
 ENV DEBIAN_FRONTEND=noninteractive
-# apt + pip packages
+
+# Install apt & pip packages
 RUN set -ex \
     && apt-get update \
     && apt-get install ${APT_PKGS} \
     && update-alternatives --install \
-        /usr/bin/python \
-        python \
+        /usr/bin/python python \
         /usr/bin/python3 1 \
     && python3 -m pip install ${PIP_PKGS} \
     && apt-get clean \
@@ -49,27 +65,18 @@ RUN set -ex \
         /tmp/* \
     && true
 
-# golang
+# Install golang from upstream
 ENV PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/usr/local/go/bin"
 RUN set -ex \
     && export arch=$(uname -m | awk '{ if ($1 == "x86_64") print "amd64"; else if ($1 == "aarch64" || $1 == "arm64") print "arm64"; else print "unknown" }') \
-    && export goversion="$(curl -s https://go.dev/dl/?mode=json \
-        | awk -F'[":go]' '/  "version"/{print $8}' \
-        | head -n1)" \
-    && curl -L https://go.dev/dl/go${goversion}.linux-${arch}.tar.gz \
-        | tar -C /usr/local/ -xzvf - \
+    && export goversion="$(curl -s https://go.dev/dl/?mode=json | awk -F'[":go]' '/  "version"/{print $8}' | head -n1)" \
+    && curl -L https://go.dev/dl/go${goversion}.linux-${arch}.tar.gz | tar -C /usr/local/ -xzvf - \
     && which go \
     && go version \
-    && go install github.com/cweill/gotests/gotests@latest \
-    && go install github.com/fatih/gomodifytags@latest \
-    && go install github.com/josharian/impl@latest \
-    && go install github.com/haya14busa/goplay/cmd/goplay@latest \
-    && go install github.com/go-delve/delve/cmd/dlv@latest \
-    && go install honnef.co/go/tools/cmd/staticcheck@latest \
-    && go install golang.org/x/tools/gopls@latest \
+    && for pkg in ${GO_PKGS}; do go install ${pkg}; echo "Installed: ${pkg}"; done \
     && true
 
-# nodejs npm yarn
+# Install nodejs npm yarn
 RUN set -ex \
     && export NODE_MAJOR=20 \
     && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key \
@@ -94,7 +101,7 @@ RUN set -ex \
     && yarn --version \
     && true
 
-# pulumi
+# Install pulumi
 RUN set -ex \
     && export arch=$(uname -m | awk '{ if ($1 == "x86_64") print "x64"; else if ($1 == "aarch64" || $1 == "arm64") print "arm64"; else print "unknown" }') \
     && export urlPulumiRelease="https://api.github.com/repos/pulumi/pulumi/releases/latest" \
@@ -102,15 +109,14 @@ RUN set -ex \
     && export urlPulumiBase="https://github.com/pulumi/pulumi/releases/download" \
     && export urlPulumiBin="pulumi-v${urlPulumiVersion}-linux-${arch}.tar.gz" \
     && export urlPulumi="${urlPulumiBase}/v${urlPulumiVersion}/${urlPulumiBin}" \
-    && curl -L ${urlPulumi} \
-        | tar xzvf - --directory /tmp \
+    && curl -L ${urlPulumi} | tar xzvf - --directory /tmp \
     && mv /tmp/pulumi/* /usr/local/bin/ \
     && rm -rf /tmp/pulumi \
     && which pulumi \
     && pulumi version \
     && true
 
-# pulumictl
+# Install pulumictl
 RUN set -ex \
     && export arch=$(uname -m | awk '{ if ($1 == "x86_64") print "amd64"; else if ($1 == "aarch64" || $1 == "arm64") print "arm64"; else print "unknown" }') \
     && export urlPulumiRelease="https://api.github.com/repos/pulumi/pulumictl/releases/latest" \
@@ -118,36 +124,14 @@ RUN set -ex \
     && export urlPulumiBase="https://github.com/pulumi/pulumictl/releases/download" \
     && export urlPulumiBin="pulumictl-v${urlPulumiVersion}-linux-${arch}.tar.gz" \
     && export urlPulumi="${urlPulumiBase}/v${urlPulumiVersion}/${urlPulumiBin}" \
-    && curl -L ${urlPulumi} \
-        | tar xzvf - --directory /tmp \
+    && curl -L ${urlPulumi} | tar xzvf - --directory /tmp \
     && mv /tmp/pulumictl /usr/local/bin/ \
     && rm -rf /tmp/* \
     && which pulumictl \
     && pulumictl version \
     && true
 
-# helm
-RUN set -ex \
-    && export varVerHelm="$(curl -s https://api.github.com/repos/helm/helm/releases/latest | awk -F '[\"v,]' '/tag_name/{print $5}')" \
-    && export varUrlHelm="https://get.helm.sh/helm-v${varVerHelm}-linux-amd64.tar.gz" \
-    && curl -L ${varUrlHelm} | tar xzvf - --directory /tmp linux-amd64/helm \
-    && mv /tmp/linux-amd64/helm /bin/helm \
-    && rm -rf /tmp/linux-amd64 \
-    && chmod +x /bin/helm \
-    && /bin/helm version \
-    && true
-
-# kubectl
-RUN set -ex \
-    && export arch=$(uname -m | awk '{ if ($1 == "x86_64") print "amd64"; else if ($1 == "aarch64" || $1 == "arm64") print "arm64"; else print "unknown" }') \
-    && export varKubectlVersion="$(curl --silent -L https://storage.googleapis.com/kubernetes-release/release/stable.txt | sed 's/v//g')" \
-    && export varKubectlUrl="https://storage.googleapis.com/kubernetes-release/release/v${varKubectlVersion}/bin/linux/${arch}/kubectl" \
-    && curl -L ${varKubectlUrl} --output /usr/local/bin/kubectl \
-    && chmod +x /usr/local/bin/kubectl \
-    && kubectl version --client || exit 1 \
-    && true
-
-# Kind Kubernetes-in-Docker
+# Install kind (Kubernetes-in-Docker)
 RUN set -ex \
     && export arch=$(uname -m | awk '{ if ($1 == "x86_64") print "amd64"; else if ($1 == "aarch64" || $1 == "arm64") print "arm64"; else print "unknown" }') \
     && export urlKindRelease="https://api.github.com/repos/kubernetes-sigs/kind/releases/latest" \
@@ -161,6 +145,27 @@ RUN set -ex \
     && kind version \
     && true
 
+# Install kubectl
+RUN set -ex \
+    && export arch=$(uname -m | awk '{ if ($1 == "x86_64") print "amd64"; else if ($1 == "aarch64" || $1 == "arm64") print "arm64"; else print "unknown" }') \
+    && export varKubectlVersion="$(curl --silent -L https://storage.googleapis.com/kubernetes-release/release/stable.txt | sed 's/v//g')" \
+    && export varKubectlUrl="https://storage.googleapis.com/kubernetes-release/release/v${varKubectlVersion}/bin/linux/${arch}/kubectl" \
+    && curl -L ${varKubectlUrl} --output /usr/local/bin/kubectl \
+    && chmod +x /usr/local/bin/kubectl \
+    && kubectl version --client || exit 1 \
+    && true
+
+# Install helm
+RUN set -ex \
+    && export varVerHelm="$(curl -s https://api.github.com/repos/helm/helm/releases/latest | awk -F '[\"v,]' '/tag_name/{print $5}')" \
+    && export varUrlHelm="https://get.helm.sh/helm-v${varVerHelm}-linux-amd64.tar.gz" \
+    && curl -L ${varUrlHelm} | tar xzvf - --directory /tmp linux-amd64/helm \
+    && mv /tmp/linux-amd64/helm /usr/local/bin/helm \
+    && chmod +x /usr/local/bin/helm \
+    && helm version \
+    && rm -rf /tmp/linux-amd64 \
+    && true
+
 WORKDIR /provider
 CMD ["make", "build"]
 
@@ -171,10 +176,10 @@ ARG PULUMI
 LABEL \
     org.opencontainers.image.version=$VERSION \
     org.opencontainers.image.created=$BUILD_DATE \
-    org.opencontainers.image.licenses="APACHE2" \
     org.opencontainers.image.vendor="Pulumi" \
+    org.opencontainers.image.licenses="APACHE2" \
     org.opencontainers.image.title="Pulumi native provider build image." \
-    org.opencontainers.image.description="A containerized environment for building native pulumi providers." \
-    org.opencontainers.image.documentation="https://github.com/pulumi/pulumi-provider-boilerplate" \
     org.opencontainers.image.url="https://github.com/pulumi/pulumi-provider-boilerplate" \
+    org.opencontainers.image.documentation="https://github.com/pulumi/pulumi-provider-boilerplate" \
+    org.opencontainers.image.description="A containerized environment for building native pulumi providers." \
     org.opencontainers.image.authors="https://github.com/pulumi"
