--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,8 @@
         "golang.go",
         "vscodevim.vim",
         "github.copilot",
+        "ms-python.python",
+        "ms-vscode.makefile-tools",
         "ms-azuretools.vscode-docker",
         "ms-vscode-remote.remote-containers",
         "bierner.markdown-preview-github-styles"
