--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,22 +14,23 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: docker://ghcr.io/pulumi/devcontainer:latest
-      options: --user vscode
+      options: --user root
     permissions:
       contents: read
       packages: read
       actions: read
     steps:
-    -
-      name: Adjust UID for GitHub Actions
-      run: |
-        # Adjust the UID of the 'vscode' user to 1001 and GID if necessary
-        sudo usermod -u 1001 vscode
-        sudo groupmod -g 1001 vscode
-        # Ensure the vscode user owns their home directory
-        sudo chown -R vscode:vscode /home/vscode
-        # Ensure the vscode user has the right permissions on the working directories
-        sudo chown -R vscode:vscode /__w/
+    #-
+    #  name: Adjust UID for GitHub Actions
+    #  run: |
+    #    # Adjust the UID of the 'vscode' user to 1001 and GID if necessary
+    #    sudo usermod -u 1001 vscode
+    #    sudo groupmod -g 1001 vscode
+    #    sudo usermod -aG admin vscode
+    #    # Ensure the vscode user owns their home directory
+    #    sudo chown -R vscode:vscode /home/vscode
+    #    # Ensure the vscode user has the right permissions on the working directories
+    #    sudo chown -R vscode:vscode /__w/
     -
       name: Checkout repository
       uses: actions/checkout@v4
