--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,17 +20,6 @@ jobs:
       packages: read
       actions: read
     steps:
-    #-
-    #  name: Adjust UID for GitHub Actions
-    #  run: |
-    #    # Adjust the UID of the 'vscode' user to 1001 and GID if necessary
-    #    sudo usermod -u 1001 vscode
-    #    sudo groupmod -g 1001 vscode
-    #    sudo usermod -aG admin vscode
-    #    # Ensure the vscode user owns their home directory
-    #    sudo chown -R vscode:vscode /home/vscode
-    #    # Ensure the vscode user has the right permissions on the working directories
-    #    sudo chown -R vscode:vscode /__w/
     -
       name: Checkout repository
       uses: actions/checkout@v4
@@ -38,17 +27,20 @@ jobs:
       with:
         submodules: 'recursive'
     -
-      name: Build and install
+      name: Build
       id: build
       run: |
+        set -ex
         make build
     -
-      name: Build and install
+      name: Install
       id: install
       run: |
+        set -ex
         make install
     -
-      name: Build and install
+      name: Generate multi-language examples from yaml IaC program
       id: generate-examples
       run: |
+        set -ex
         make examples
