--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,6 +31,7 @@ jobs:
       id: build
       run: |
         set -ex
+        pulumictl get version
         make build
     -
       name: Install
