--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -1,9 +1,9 @@
 name: provider-kind-native
-runtime: python
+runtime: yaml
 plugins:
   providers:
     - name: kind
-      path: ../../bin # relative path to the provider binary for local development and testing
+      path: /home/vscode/go/bin # relative path to the provider binary for local development and testing
 
 resources:
   myArbitraryKindClusterResourceName:
