--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -10,6 +10,9 @@
   //},
   "name": "pulumi",
   "image": "ghcr.io/pulumi/devcontainer",
+  "settings": {
+    "terminal.integrated.shell.linux": "/usr/bin/zsh"
+  },
   "customizations": {
     "vscode": {
       "settings": [
@@ -32,10 +35,16 @@
         "golang.go",
         "vscodevim.vim",
         "github.copilot",
+        "eamodio.gitlens",
         "ms-python.python",
+        "redhat.vscode-yaml",
+        "eg2.vscode-npm-script",
+        "esbenp.prettier-vscode",
         "ms-vscode.makefile-tools",
         "ms-azuretools.vscode-docker",
+        "github.vscode-pull-request-github",
         "ms-vscode-remote.remote-containers",
+        "visualstudioexptteam.vscodeintellicode",
         "bierner.markdown-preview-github-styles"
       ]
     }
@@ -48,6 +57,7 @@
       "moby": false
     }
   },
+  "postCreateCommand": "git submodule update --init --recursive",
   "remoteUser": "vscode",
   "runArgs": ["--network=host"]
 }
