--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,10 @@ jobs:
       with:
         submodules: 'recursive'
     -
+      name: Unshallow clone for tags
+      id: tags
+      run: git fetch --prune --unshallow --tags
+    -
       name: Build
       id: build
       run: |
