--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,6 +31,7 @@ jobs:
       id: tags
       run: |
         set -ex
+        sudo chown -R $(whoami) /__w/pulumi-kind-native/pulumi-kind-native
         git config --global --add safe.directory /__w/pulumi-kind-native/pulumi-kind-native
         git fetch --prune --unshallow --tags
     -
