--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -3,7 +3,7 @@ runtime: yaml
 plugins:
   providers:
     - name: kind
-      path: /home/vscode/go/bin # relative path to the provider binary for local development and testing
+      path: ../../bin # relative path to the provider binary for local development and testing
 
 resources:
   myArbitraryKindClusterResourceName:
